# pyglossary

./: .gitignore  .sh-list  .woodpecker.yml  ARCHITECTURE.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README-new.md  README-old.rst  README.md  README.rst  SDIC_WRITER.md  _license-dialog  about  build-exe.bat  clean.bat  clean.sh  config.json  help  license-dialog  main.py  pep8  plugins.json  pyglossary.bat  pyglossary.desktop  pyglossary.pyw  pyglossary.sh  pyglossary.spec  pyproject.toml  requirements-test.txt  requirements.txt  run-with-docker.sh  setup.py  whitelist.py
.cursor/rules/: release-notes.mdc  uv-python.mdc
.github/: copilot-instructions.md  spellcheck.yml  wordlist.txt
.github/ISSUE_TEMPLATE/: feature-request.md
.github/scripts/: check-max-blob-size.sh  create-release.sh  get-ruff.sh  no-diff.sh  test-deprecated.sh  test.sh
.github/workflows/: binary-release.yml  build-macos-slint.yml  build-macos.yml  build-win64.yml  build-windows-slint.yml  build-windows-wx.yml  codeql-analysis.yml  codeql.yml  doc-spelling.yml  gen.yml  max-blob-size.yml  mdformat.yml  pip-mac.yml  plugin-validate.yml  pypi-release.yml  ruff.yml  test-deprecated.yml  test-dev.yml  test-mac.yml  test.yml  validate-plugins.yml  validate.yml
doc/: AUTHORS  apple.md  bgl_structure.svgz  config.md  config.rst  dsl.rst  entry-filters.md  entry_filters.md  gtk3.md  gtk4.md  internals.md  lib-usage.md  lzo.md  pyicu.md  sort-key.md  tabfile-spec.md  term-colors.md  term_colors.md  termux.md  tkinter.md
doc/Octopus MDict/: README.rst
doc/babylon/: BGL.svgz  bgl-info.md  bgl_info.md
doc/format-desc/: csv-create.py
doc/lib-examples/: any_to_txt.py  custom-writer-csv.py  custom-writer-epub2.py  custom-writer-stardict.py  oxford.py  py-to-stardict.py
doc/non-gui_examples/: any_to_txt.py  merge.py  oxford.py  py-to-stardict.py  reverse.py  reverseBy2ps.py  takeDicWords.py  takeDicWordsDic.py  takeFileWords.py
doc/octopus_mdict/: MDD.svgz  MDX.svgz  README.md  README.rst
doc/p/: __index__.md  aard2_slob.md  abc_medical_notes.md  almaany.md  anki_apkg.md  appledict.md  appledict_bin.md  ayandict_sqlite.md  babylon_bgl.md  cc_cedict.md  cc_kedict.md  crawler_dir.md  csv.md  dicformids.md  dict_cc.md  dict_cc_source.md  dict_cc_split.md  dict_org.md  dict_org_source.md  dictunformat.md  digitalnk.md  dikt_json.md  dsl.md  ebook_kobo_dictfile.md  edict2.md  edlin.md  epub2.md  epwing.md  freedict.md  freedict_md.md  gettext_po.md  html_dir.md  info.md  iupac_goldbook.md  jmdict.md  jmnedict.md  json.md  kobo.md  kobo_dictfile.md  lingoes_ldf.md  (+24 more)
doc/releases/: 3.0.0.md  3.0.1.md  3.0.2.md  3.0.3.md  3.0.4.md  3.1.0.md  3.2.0.md  3.2.1.md  3.3.0.md  4.0.0.md  4.1.0.md  4.2.0.md  4.2.1.md  4.3.0.md  4.4.0.md  4.4.1.md  4.5.0.md  4.6.0.md  4.6.1.md  4.7.0.md  4.7.1.md  5.0.0.md  (+17 more)
lib-src/: README  babylon.cpp  babylon.h  clean  compile.sh  stardict.cpp  stardict.i  stardictbuilder.i
pkg/: pyglossary.desktop
plugins/: Arianpur-OpenDictionary.py  appledict.py  babylon.py  bdc.py  bgl.py  dicformids.py  dictd.py  formats_common.py  freedict.py  gettext_mo.py  gettext_po.py  jcal_extra.py  mdic.py  mtux_mdic.py  octopus_mdic_source.py  omnidic.py  pmd.py  sdict.py  sdict_src.py  sql.py  stardict.py  tabfile.py  testformat.py  treedict.py  xdxf.py  xfardic.py
plugins-meta/: index.json
pyglossary/: __init__.py  alchemy.py  apple_utils.py  arabic_utils.py  compress.py  compression.py  config_type.py  core.py  core_test.py  ebook_base.py  entry.py  entry_base.py  entry_filters.py  entry_list.py  entry_merge.py  entry_test.py  exir.py  file_utils.py  flags.py  glossary.py  glossary_creator.py  glossary_info.py  glossary_progress.py  glossary_test.py  glossary_type.py  glossary_types.py  glossary_utils.py  glossary_v2.py  glossary_v3.py  gregorian.py  gregorian_test.py  html_utils.py  html_utils_test.py  icu_types.py  image_utils.py  info.py  info_writer.py  interfaces.py  io_utils.py  iter_utils.py  (+34 more)
res/: mimapps.list  pyglossary.icns  resources.xml
scripts/: _migrate_info_api.py  autofix-plugin-types  check-missing-types  check-python-version  check-shell-scripts.sh  check-style  check-style-slow  config-doc-gen.py  config-doc.py  create-conf-dir.py  diff-glossary  doc-pypi-links.sh  docker-deb-setup.sh  dump.py  entry-filters-doc.py  extract-words.py  format-code  gen  gen.sh  get-unlisted-formats.sh  glos-find-bar-words.py  lang-from-name-info-file  lang-from-name.py  mypy-deps.sh  plist-to-json.py  plugin-doc-gen.py  plugin-doc.py  plugin-index.py  plugin-validate.py  pyproject-validate.py  readmdict.py  release-new-version-github  release-new-version.sh  requirements-gen.py  run_ubuntu_workflows_docker.py  term-colors.json  test-cover-html-plugin.sh  test-cover-html.sh  test-cover.sh  test-deprecated.sh  (+15 more)
src/: alchemy.py  clean  convert_appledict.py  dbe_find.py  exir.py  get_version.py  glossary.py  glossary_direct.py  license  progressbar.py  pyglossary.pyw  pyglossary_gregorian.py  rc.py  setup.py  text_utils.py  ui_base.py  ui_cmd.py  ui_gtk.py  ui_gtk_ng.py  ui_gtk_noglade.py  ui_qt.py  ui_tk.py
tests/: apple_utils_test.py  conftest.py  dictzip_test.py  dsl_test.py  ebook_kobo_test.py  edict2_test.py  entry_test.py  g_aard2_slob_r_test.py  g_aard2_slob_test.py  g_aard2_slob_w_test.py  g_anki_apkg_test.py  g_appledict_bin_test.py  g_appledict_src_test.py  g_appledict_test.py  g_babylon_bgl_test.py  g_babylon_bgl_writer_test.py  g_csv_plugin_test.py  g_csv_test.py  g_dicformids_test.py  g_dict_org_source_test.py  g_dict_org_test.py  g_dictunformat_test.py  g_dsl_test.py  g_ebook_epub2_test.py  g_edict2_test.py  g_freedict_test.py  g_gettext_po_test.py  g_jmdict_test.py  g_json_test.py  g_kobo_dictfile_test.py  g_kobo_test.py  g_lingoes_ldf_test.py  g_mdict_writer.py  g_octopus_mdict_writer_test.py  g_pocketbook_sdic_test.py  g_quickdic6_test.py  g_sql_test.py  g_stardict_merge_syns_test.py  g_stardict_sort_test.py  g_stardict_test.py  (+26 more)
ui/: base.py  dependency.py  paths.py  progressbar.py  rc.py  ui.py  ui_cmd.py  ui_gtk.py  ui_gtk_new.py  ui_qt.py  ui_tk.py
(+698 files in other folders)
